# tx2_uav_fengdian

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  env_prepare.sh  mmc_onboard.exvim  test_cv_nanogui.cpp  test_gst_opencv.cpp  tx2.cbp
modules/MMC_UAVCAN_spec/: .gitignore  .gitmodules  CMakeLists.txt
modules/MMC_UAVCAN_spec/config/: config.h
modules/MMC_UAVCAN_spec/dsdl/src/mmc/: 20050.RawIMU.uavcan  20062.RawMag.uavcan  20063.RawBaro.uavcan  20067.GnssEcef.uavcan  20071.BatteryHeartbeat.uavcan  20077.FcHeartbeat.uavcan  20078.FcState1.uavcan  20079.FcState2.uavcan  20083.RawRadar.uavcan  20085.StereoVision.uavcan  215.SafetyButton.uavcan  226.SensorCalibration.uavcan  236.MountCameraShot.uavcan  250.Tx2Command.uavcan
modules/MMC_UAVCAN_spec/dsdl/tools/: gen.sh
modules/MMC_UAVCAN_spec/libuavcan/libuavcan_drivers/stm32/driver/include/uavcan_stm32/: can.hpp  thread.hpp
modules/MMC_UAVCAN_spec/libuavcan/libuavcan_drivers/stm32/driver/src/: uc_stm32_can.cpp  uc_stm32_thread.cpp
modules/embed-resource/: EmbedResource.cbp  Makefile  cmake_install.cmake  embed-resource
modules/libuavcan/: Makefile  cmake_install.cmake  uavcan.cbp
modules/libuavcan/googletest-download/: CMakeLists.txt
modules/libuavcan/libuavcan/: Makefile  cmake_install.cmake  libuavcan.cbp
modules/libuavcan/libuavcan_drivers/linux/: Makefile  cmake_install.cmake  libuavcan_linux.cbp
modules/libuavcan/libuavcan_drivers/posix/: Makefile  cmake_install.cmake  libuavcan_posix.cbp
modules/nanogui/: NanoGUI.cbp
modules/nanogui/include/nanogui/: imageview.h
modules/nanogui/src/: common.cpp  imageview.cpp
src/: main.cpp  tags
src/Calc/: .opencvprocess.h.swp  opencvprocess.h  testCalc.h  uavcanprocess.h
src/Calc/UavcanNode/: UavcanNode.cpp  UavcanNode.h
src/Calc/VideoProcess/: VideoProcess.cpp  VideoProcess.h
src/GUI/: appbuilder.h  application.cpp  application.h  openglcanvas.cpp  openglcanvas.h
src/GUI/shader/: basicShader.fs.c  basicShader.vs  basicShader.vs.c
src/Utils/: threadexchangedata.h
